testing policies/mutate/pod/pod.yml
apiVersion: v1
kind: Pod
metadata:
  labels:
    app: myapp
  name: myapp-pod
spec:
  containers:
  - name: nginx
    image: nginx
