testing policies/mutate/pod/policy.yml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: insert-container
spec:
  rules:
  - name: insert-container
    match:
      resources:
        kinds:
        - Pod
    mutate:
      patchesJson6902: |-
        - op: add
          path: "/spec/containers/0"
          value: {"name":"busybox","image":"busybox:latest"}
          
        - op: add
          path: "/spec/containers/0/command"
          value:
          - ls
